--- a/src/adminPanel/dashboard.css
+++ b/src/adminPanel/dashboard.css
@@ -57,6 +57,7 @@ margin-top: 30px;
   justify-content: center;
 }
 .mid {
+  background-color: rgb(226,238,232);
   flex: 2;
   display: flex;
   flex-direction: column;
@@ -77,8 +78,11 @@ margin-top: 30px;
   width: auto;
   /* margin-left: 10px; */
   align-items: flex-start;
-  justify-content: flex-start;
-   
+  justify-content: flex-start; 
+}
+.borderHeader {
+  border-bottom: 1px solid rgb(157,205,200);
+  margin: 0px 23px 0px 23px;
 }
 .textIcon {
   width: auto; 
@@ -227,7 +231,9 @@ margin-left: 20px;
 }
 
  @media screen and (max-width: 769px) {
-
+  .mid {
+    background-color: rgb(226, 238, 232);
+  }
   .inputFlex{
     display: flex;
     align-items: flex-start;
