--- a/src/adminPanel/dashboard.css
+++ b/src/adminPanel/dashboard.css
@@ -19,6 +19,18 @@
   width: auto;
   flex-direction: row;
 }
+::placeholder {
+  color: rgb(54, 155, 106);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+ color: rgb(54, 155, 106);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+ color: rgb(54, 155, 106);
+}
 .drawer {
   display: flex;
   flex-direction: column;
@@ -47,6 +59,9 @@
   white-space: 'pre';
   font-weight: 700;
 }
+.iconTab {
+  margin-top: 8vh;
+}
 .somediv {
 display: flex;
 flex-direction: row;
@@ -57,6 +72,7 @@ margin-top: 30px;
   justify-content: center;
 }
 .mid {
+  /* background-color: black; */
   background-color: rgb(226,238,232);
   flex: 2;
   display: flex;
@@ -68,6 +84,14 @@ margin-top: 30px;
   display: flex;
   flex-direction: column;
   width: auto;
+}
+.sectionqr {
+  background-color: rgb(226, 238, 232);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: auto;
+
 }
 .iconTab{
   flex: 1;
@@ -229,10 +253,140 @@ margin-left: 20px;
 .alag{
   margin-left: 0vw;
 }
+.paper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(226, 238, 232);
+  width: 40vw;
+  height: 40vh;
+  border-radius: 21px;
+}
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bottomButton {
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 68%;
+  margin-bottom: 5vh;
+}
+.midsec2 {
+  /* background-color: aliceblue; */
+  display: flex;
+  height: 75vh;
+  width: auto;
+  margin-left: 7vw;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.txtQR {
+  width: auto; /* 332px */
+  height: auto; /* 48px */
+  overflow: visible;
+  white-space: pre;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Philosopher", serif;
+  color: #334B49;
+  letter-spacing: 0px;
+  line-height: 1.2;
+  font-size: 23px;
+  text-align: justify;
+  margin-top: 10px;
+  margin-bottom: 2px;
+}
+.botQR {
+  display: flex;
+  flex-direction: column;
+  width: 381px;
+  align-items: center;
+  justify-content: center;
+}
+.qrbutton {
+  margin-top: 20px;
+  font-family: "Philosopher", serif;
+  font-weight: lighter;
+  background-color: rgb(51, 75, 73);
+  border-radius: 13px;
+  font-size: 1.3em;
+  padding: 13px 15px 13px 15px ;
+  color: rgb(255, 255, 255);
+}
+.imageQR {
+  height: 359px;
+  width: 381px;
+}
+.modalText {
+  padding-top: 20px;
+  width: auto; /* 62px */
+  height: auto; /* 36px */
+  overflow: visible;
+  white-space: pre;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Philosopher", serif;
+  color: #334B49;
+  letter-spacing: 0px;
+  line-height: 1.2;
+  font-size: 31px;
+}
+.modalID{
+  font-size: 24px;
+  margin-top:0;
+  padding-top: 0;
+  padding-bottom: 1px; 
+  margin-left:9.5vw
+}
+.modalButton1{
+  background-color: rgb(51, 75, 73);
+  text-align: center;
+  font-size: 16px;
+  color: white;
+  padding: 10px 15px 10px 15px;
+  border-radius: 6px;
+}
+.firstMod {
+/* background-color: aliceblue; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 40vw;
+  height: auto;
+  justify-content: center;
+}
+.lengthFile {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.inputBookQR {
+  background-color: rgb(255, 255, 255);
+  color:rgb(51, 75, 73);
+  border: rgba(0, 0, 0, 0);
+  border-radius: 8px;
+  border-width: 1px;
+  caret-color: rgb(51, 51, 51);
+  padding: 13px;
+  width: 20vw;
+  margin-top: 10px;
+}
+
 
  @media screen and (max-width: 769px) {
   .mid {
+    width: 80.5vw;
     background-color: rgb(226, 238, 232);
+    
   }
   .inputFlex{
     display: flex;
@@ -262,6 +416,23 @@ margin-left: 20px;
     display: flex;
     width: 100%;  
    }
+   .paper {
+     height: 31%;
+     width: 90%;
+   }
+ 
+   .modalText {
+     font-size: 21px;
+     margin-left: 0;
+   }
+   .modalID {
+    margin-left: -8px;
+    
+    font-size: 17px;
+  }
+   .modalButton1 {
+     padding: 5px 10px 5px 10px
+   }
    .inputBook {
     background-color: rgb(255, 255, 255);
     color:rgb(51, 75, 73);
@@ -281,6 +452,11 @@ margin-left: 20px;
      align-items: flex-start;
      width: 96%;
      
+  }
+  .imageQR {
+    height: 259px;
+    width: 281px;
+    margin-top: 10%;
   }
    .drawer {
      background-color: rgb(157, 205, 200);
@@ -363,6 +539,32 @@ margin-left: 20px;
      padding-left: 15px;
      padding-right: 20px;
    }
+   .sectionqr {
+     /* background-color: black; */
+    overflow-y: hidden;
+    height: 90vh;
+    padding-left: 15px;
+    padding-right: 20px;  
+    margin:0
+   }
+   .txtQR {
+     font-size: 12px;
+   }
+   .botQR {
+     width: 281px;
+     align-items: center;
+     justify-content: center;
+   }
+   .qrbutton {
+    font-size: 1em;
+    padding: 10px 9px 10px 9px ;
+    margin: 0;
+    margin-top: 20px;
+  }
+  .inputBookQR {
+    width: 36vw;
+    padding: 7px 14px 7px 14px ;
+  }
    .secHeader{
      align-items: center;
      justify-content: space-between;
@@ -393,34 +595,16 @@ margin-left: 20px;
      align-items: flex-start;
      justify-content: flex-start;
    }
-   /* .footerB { */
-     /* display: none;
+   .midsec2 {
+    flex: 1;
+     display: flex;
+     margin:0;
+     width: 100%;
+     align-items: center;
+     justify-content: center;
+    /* overflow-y: hidden; */
    }
-   .threeBar {
-     display: none;
-   }
-   .textColor{
-  font-size: medium;
-  margin-top: 0;
-   }
-   .imgHead {
-     height: 20px;
-     width: 20px;
-     margin-top: 0px;
-   }
-   .upload-books{
-     font-size: 20px;
-   }
-   .addBook{
-    font-size: 1em;
-    padding: 5px 10px 5px 10px ;
-   }
-   .midSec {
-     height: 100vh;
-     width: auto;
-    margin-left: 7px;
-    justify-content: space-evenly;
-   }   */
+  
    .textColor{
     display: none;
      }
