--- a/src/login/login.css
+++ b/src/login/login.css
@@ -19,6 +19,26 @@
       height: 100vh;
       width: 100vw;
   }
+  .error {
+      display: flex;
+      flex-direction: column;
+    width: 100vw; /* 32px */
+    height: 20vh; /* 19px */
+    overflow: visible;
+    align-items: center;
+    justify-items: center;
+    white-space: pre;
+    font-weight: 700;
+    font-style: normal;
+    font-family: "Philosopher", serif;
+    color: black;
+    text-align: justify;
+    
+    letter-spacing: 0px;
+    line-height: 1.2;
+    font-size: 16px;
+    
+  }
   .logo{
      padding-top: 80px;
       width: 100vw;
@@ -49,7 +69,7 @@
       line-height: 1.4px;
       text-align: left;
       font: default;
-      color:rgb(155, 214, 187);
+      /* color:rgb(155, 214, 187); */
       caret-color: rgb(51, 51, 51);
       
   }
