--- a/src/adminPanel/dashboard.css
+++ b/src/adminPanel/dashboard.css
@@ -502,7 +502,7 @@ margin-left: 20px;
     font-size: 1em;
     padding: 5px 25px 5px 25px ;
     color: rgb(255, 255, 255);
-    width: 16vw;
+    /* width: 16vw; */
   }
    .modalButton1 {
      padding: 5px 10px 5px 10px
