--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;   
+    /* overflow-x: hidden;    */
     overflow-y: hidden;
 }
 code {
