--- a/src/adminPanel/dashboard.css
+++ b/src/adminPanel/dashboard.css
@@ -67,6 +67,70 @@ display: flex;
 flex-direction: row;
 margin-top: 30px;
 }
+.returnBook {
+  /* background-color: aliceblue; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  margin-left: 2vw;
+}
+.returnModalQR {
+  display: flex;
+  margin-top: 40px;
+  flex-direction: row;
+  width: 95%;
+  align-items: center;
+  justify-content: space-between;
+}
+.footerScanned {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-bottom: 40px;
+  width: 95%;
+  height: auto;
+}
+.scannedButton {
+  background-color: rgb(51, 75, 73);
+  text-align: center;
+  font-size: 16px;
+  color: white;
+  padding: 13px 15px 13px 15px;
+  border-radius: 12px;
+  margin-left: 10px;
+}
+.text1 {
+  width: auto; /* 168px */
+  height: auto; /* 17px */
+  overflow: visible;
+  white-space: pre;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Philosopher", serif;
+  color: #384B42;
+  letter-spacing: 1.4px;
+  line-height: 1.2;
+  font-size: 1.5vw;
+  margin-bottom: 20px;
+}
+.headingreturn {
+  width: auto; /* 310px */
+  height: auto; /* 22px */
+  overflow: visible;
+  position: inherit;
+  white-space: pre;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Philosopher", serif;
+  color: #384B42;
+  letter-spacing: 1.4px;
+  /* line-height: 1.2; */
+  font-size: 2.3vw;
+}
 .footerB {
   display: flex;
   justify-content: center;
@@ -94,6 +158,17 @@ margin-top: 30px;
 
 }
 .paper1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: rgb(226, 238, 232);
+  width: 40%;
+  height: 60vh;
+  border-radius: 21px;
+}
+.paper2 {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -316,6 +391,13 @@ margin-left: 20px;
   display: flex;
   flex-direction: column;
 }
+.midsec4{
+  /* background-color: aliceblue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+}
 .bottomButton {
   display: flex;
   flex-direction: row;
@@ -330,7 +412,6 @@ margin-left: 20px;
   height: 75vh;
   width: auto;
   margin-left: 7vw;
-  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -412,6 +493,12 @@ margin-left: 20px;
   padding: 10px 15px 10px 15px;
   border-radius: 6px;
 }
+.camera {
+  display: flex;
+  align-items: center;
+  height: 79vh;
+  width: 40vw;
+}
 .firstMod {
 /* background-color: aliceblue; */
   display: flex;
@@ -476,6 +563,12 @@ margin-left: 20px;
      width: 50%;
      height: 50%;
    }
+   .text1 {
+     font-size: 2.5vw;
+   }
+   .headingreturn {
+     font-size: 4vw;
+   }
    .threeFlex {
      /* background-color: black; */
      margin:0;
@@ -485,6 +578,10 @@ margin-left: 20px;
    .paper {
      height: 31%;
      width: 90%;
+   }
+   .paper2{
+     width: 80%;
+     height: 40%;
    }
    .iconTab {
     margin-top: 8vh;
@@ -525,12 +622,23 @@ margin-left: 20px;
      flex-direction: column;
      align-items: flex-start;
      width: 96%;
-     
+  }
+  .scannedButton {
+    font-size: 11px;
   }
   .imageQR {
     height: 259px;
     width: 281px;
     margin-top: 10%;
+  }
+  .midsec4{
+    /* background-color: aliceblue; */
+  }
+  .camera {
+    flex: 1;
+    height: auto;
+    width: auto;
+    
   }
    .drawer {
      background-color: rgb(157, 205, 200);
